# TrendMinds

./: .env.example  .gitignore  LICENSE  README.md  Scaffold.py  app_streamlit.py  config.yml  dashboard.html  feed_parser.py  load_env.py  main.py  pyproject.toml  requirements.txt  subscribers.json
.github/workflows/: subscribe-from-issues.yml  subscribe.yml  weekly.yml
backend/: api.py  app.py
data/chroma/ai/482c5541-c893-4ccd-a2b5-ef652ca13e00/: index_metadata.pickle
data/chroma/climate/fa4d592d-4f72-4040-9daf-67477c66695c/: index_metadata.pickle
data/chroma/crypto/: chroma.sqlite3
data/chroma/cybersecurity/: chroma.sqlite3
frontend/: dashboard.html
frontend/news-hub/: package-lock.json  package.json
frontend/news-hub/src/app/: page.js
frontend/news-hub/src/app/components/: Features.jsx  Footer.jsx  Headlines.jsx  Hero.jsx  Navbar.jsx  Subscribe.jsx
output/: climate_latest.html  climate_latest.md  crypto_latest.html  crypto_latest.md  cybersecurity_latest.html  cybersecurity_latest.md  latest.html  latest.json  latest.md
src/: chains.py  fetch.py  index.py  newsletter.py  run.py  subscription.py  utils.py
