[project]
name = "genai-newsletter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "chromadb>=0.5.5",
    "feedparser>=6.0.11",
    "huggingface-hub[hf-xet]>=0.34.4",
    "jinja2>=3.1.4",
    "langchain>=0.2.10",
    "langchain-community>=0.2.10",
    "langchain-core>=0.2.10",
    "langchain-groq>=0.1.5",
    "markdown>=3.6",
    "markdownify>=0.13.1",
    "pydantic>=2.7.4",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.0.1",
    "streamlit>=1.36.0",
    "tqdm>=4.66.5",
    "trafilatura>=1.9.0",
]
